Simple view with a Play button
I need to hook it up to the content so it’ll show tracks in the content
and allow the user to play them.

--- a/src/Makefile
+++ b/src/Makefile
@@ -67,6 +67,7 @@ xpi_built := install.rdf \
              icon.png \
              $(wildcard skin/*.css) \
              $(wildcard skin/*.png) \
+             $(wildcard content/*.html) \
 
 $(xpi_file): $(xpi_built)
 	@echo "Creating XPI file."
